update vignette and description
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/EBarrays@56336 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/vignette.Rnw
+++ b/inst/doc/vignette.Rnw
@@ -27,7 +27,7 @@
 \begin{document}
 
 \title{Parametric Empirical Bayes Methods for Microarrays}
-\author{Ming Yuan, Ping Wang, Deepayan Sarkar, Michael Newton \\
+\author{Ming Yuan, Deepayan Sarkar, Michael Newton \\
 and Christina Kendziorski}
 \maketitle
 \tableofcontents
